--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -2,14 +2,23 @@
 @import '../../style/fonts.css';
 
 
+/*header*/
+/*main*/
+/*traffic_patrol*/
+
 * {
     box-sizing: border-box;
+}
+
+html.main {
+    font-size: 62.5%;
 }
 
 body.main {
     font-family: 'MoscowSans', sans-serif;
     background-color: #000000;
     color: white;
+    overflow: auto;
 }
 
 .container_main {
@@ -19,12 +28,8 @@ body.main {
     border-bottom: 1px solid white;
 }
 
-/*header, section {*/
-/*    border-bottom: 1px solid white;*/
-/*}*/
-
 .line {
-    padding: 209px 20px 0 20px;
+    padding: 0 20px 0 20px;
 }
 
 
@@ -54,7 +59,7 @@ body.main {
 .header_main .header__logo-text {
     font-family: 'MoscowSans', sans-serif;
     font-weight: 800;
-    font-size: 20px;
+    font-size: 2rem;
     margin-left: 12px;
     color: white;
 }
@@ -132,8 +137,13 @@ body.main {
 
 
 
+/* main */
+
+section.main {
+    padding: 60px 20px 0 20px;
+}
+
 section.main .container_main {
-    padding: 60px 20px 233px 20px;
     border: none;
 }
 
@@ -145,7 +155,7 @@ section.main .main_bg {
 section.main .main_title {
     text-transform: uppercase;
     font-family: 'MoscowSans', sans-serif;
-    font-size: 80px;
+    font-size: 8rem;
     font-weight: 600;
     line-height: 72px;
     margin-bottom: 24px;
@@ -158,6 +168,12 @@ section.main .main_title span:nth-child(1) {
 }
 
 section.main .main_title span:nth-child(2) {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
+
+section.main .main_title span.large_letter {
     display: inline-block;
     padding: 19px;
     border: 10px solid white;
@@ -185,7 +201,7 @@ section.main .main_info .main_info-descr {
 
 section.main .main_info .main_info-descr .main_info-text {
     font-family: 'MoscowSans', sans-serif;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 400;
     line-height: 18px;
 }
@@ -211,7 +227,7 @@ section.main .main_info .main_info-link {
     border-radius: 50px;
     font-family: 'MoscowSans', sans-serif;
     color: #FFFFFF;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 600;
     line-height: 12px;
     text-transform: uppercase;
@@ -220,6 +236,130 @@ section.main .main_info .main_info-link {
 
 section.main .main_info .main_info-link:hover {
     background-color: #FFFFFF;
-    color: #62A744;
+    color: #090909;
 }
+
+
+
+/*traffic_patrol*/
+
+section.traffic_patrol {
+    position: relative;
+    padding: 60px 20px 0 20px;
+}
+
+section.traffic_patrol .container_main {
+    padding-bottom: 120px;
+}
+
+section.traffic_patrol .traffic_patrol-wrapper {
+    display: grid;
+    /*column-gap: 96px;*/
+    grid-template-columns: repeat(5, 1fr);
+    margin-bottom: 40px;
+}
+
+section.traffic_patrol .traffic_patrol-wrapper img {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 155px;
+}
+
+section.traffic_patrol .traffic_patrol-title {
+    grid-column: 1/3;
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 3.2rem;
+    font-weight: 600;
+    line-height: 32px;
+    text-transform: uppercase;
+}
+
+section.traffic_patrol .traffic_patrol-descr {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column: 3/6;
+    gap: 20px;
+}
+
+section.traffic_patrol .traffic_patrol-text {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+section.traffic_patrol .traffic_patrol-text:nth-child(2) {
+    grid-column: 2/4;
+}
+
+section.traffic_patrol .traffic_patrol_slider {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid {
+    display: flex;
+    grid-column-start: 3;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    border: 1px solid white;
+    width: 540px;
+}
+
+section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_img {
+    max-width: 540px;
+    width: 100%;
+    height: 444px;
+    border-radius: 10px;
+    background: #090909 url("../../img/layout/pages/main/slider/amarok_slide.png") no-repeat bottom center/cover;
+}
+
+section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #FFFFFF;
+    width: 100%;
+    border-radius: 0 0 8px 8px;
+}
+
+section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .slid_info-desc .slid_info-title {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 16px;
+    color: #090909;
+    margin-bottom: 10px;
+}
+
+section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .slid_info-desc .slid_info-text {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 13px;
+    color: #787878;
+}
+
+section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .slid_info-link {
+    align-self: flex-end;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
