--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -1,3 +1,9 @@
+@media (max-width: 1500px) {
+    section.traffic_patrol .traffic_patrol-wrapper img {
+        width: 500px;
+    }
+}
+
 @media (max-width: 1410px) {
     section.main .main_title {
         font-size: 7.2rem;
@@ -19,25 +25,46 @@
         max-width: 194px;
     }
 
+    section.main .main_info-wrapper {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    section.main .main_info {
+        display: flex;
+        flex-direction: column;
+        justify-self: self-start;
+        align-items: center;
+        grid-column: 2/4;
+    }
+
     section.traffic_patrol .traffic_patrol-wrapper {
         grid-template-columns: repeat(4, 1fr);
-        gap: 22px;
+    }
+
+    section.traffic_patrol .traffic_patrol-wrapper img {
+        width: auto;
     }
 
     section.traffic_patrol .traffic_patrol-title {
         grid-column: 1/2;
+        font-size: 2.9rem;
     }
 
     section.traffic_patrol .traffic_patrol-descr {
         grid-column: 2/5;
     }
 
-    section.traffic_patrol .traffic_patrol_slider {
-        grid-template-columns: repeat(12, 1fr);
+    /*section.traffic_patrol .traffic_patrol_slider {*/
+    /*    grid-template-columns: repeat(4, 1fr);*/
+    /*}*/
+
+    section.traffic_patrol .traffic_patrol_slider-wrapper {
+        grid-column: 2/4;
     }
 
     section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid {
-        grid-column-start: 6;
+        /*grid-column: 2/4;*/
+        max-width: 540px;
     }
 }
 
@@ -54,7 +81,7 @@
     }
 
     section.main .main_info {
-        margin: 0 auto;
+        grid-column: 2/5;
         align-items: baseline;
     }
 
@@ -76,17 +103,20 @@
         line-height: 24px;
     }
 
-    section.traffic_patrol .traffic_patrol-text:nth-child(4) {
+    section.traffic_patrol .traffic_patrol-descr.two .traffic_patrol-text:nth-child(2) {
         grid-column: 2/4;
     }
 
-    section.traffic_patrol .traffic_patrol-wrapper img {
-        display: block;
+    section.traffic_patrol .traffic_patrol_slider-wrapper {
+        grid-column: 2/3;
     }
 
     section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid {
-        max-width: 231px;
         height: 280px;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_img {
+        background: #090909 url("../../img/layout/pages/main/slider/amarok_slide_mini.png") no-repeat top center/cover;
     }
 
     section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info {
@@ -122,6 +152,38 @@
         border: 5px solid white;
         width: 142px;
     }
+
+    section.traffic_patrol .traffic_patrol-title {
+        font-size: 2.1rem;
+        line-height: 22px;
+    }
+
+    section.main .main_info-wrapper {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    section.traffic_patrol .traffic_patrol-wrapper img {
+        width: 180px;
+    }
+
+    section.traffic_patrol .traffic_patrol-wrapper {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    section.traffic_patrol .traffic_patrol-descr {
+        /*height: 700px;*/
+        gap: 12px;
+        grid-column-start: 2;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    section.traffic_patrol .traffic_patrol-wrapper img {
+        width: 210px;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 @media (max-width: 640px) {
@@ -135,9 +197,21 @@
         padding: 6px;
     }
 
+    section.main .main_bg {
+        background-position: left;
+    }
+
+    section.main .main_info-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
     section.main .main_info {
-        margin: 0 auto;
-        align-items: baseline;
+        grid-column: 1/3;
+        align-items: center;
+    }
+
+    section.main .main_info .main_info-link {
+        max-width: none;
     }
 
     section.main .main_info .main_info-descr .main_info-text:first-child {
@@ -146,6 +220,56 @@
 
     section.main .main_info .main_info-descr .main_info-text:last-child {
         max-width: 280px;
+    }
+
+    section.traffic_patrol .traffic_patrol-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    section.traffic_patrol .traffic_patrol-wrapper img {
+        width: 308px;
+        left: unset;
+        top: unset;
+        right: 0;
+        bottom: 1px;
+        transform: scale(-1, 1);
+    }
+
+    section.traffic_patrol .traffic_patrol-title {
+        font-size: 2.5rem;
+        line-height: 25px;
+    }
+
+    section.traffic_patrol .traffic_patrol-descr {
+        grid-column-start: 1;
+    }
+
+    section.traffic_patrol .traffic_patrol-descr.two {
+        order: 1;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider-wrapper {
+        grid-column: 1/3;
+        margin: 0 auto;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid {
+        height: 336px;
+        grid-column: 1/2;
+        max-width: none;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .slid_info-desc .slid_info-title {
+        font-size: 1.7rem;
+        max-width: 206px;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .slid_info-desc .slid_info-text {
+        max-width: 136px;
     }
 }
 
@@ -177,6 +301,54 @@
 
     .line {
         padding: 0;
+    }
+}
+
+@media (max-width: 492px) {
+    section.main .main_bg {
+        background-position: center;
+    }
+
+    section.traffic_patrol .container_main {
+        padding-bottom: 90px;
+    }
+
+    section.traffic_patrol .traffic_patrol-wrapper {
+        grid-template-columns: 1fr;
+    }
+
+    section.traffic_patrol .traffic_patrol-title {
+        font-size: 2.4rem;
+        line-height: 24px;
+        max-width: 246px;
+        margin-bottom: 40px;
+    }
+
+    section.traffic_patrol .traffic_patrol-wrapper img {
+        width: 308px;
+        left: 182px;
+        top: 54px;
+        right: unset;
+        bottom: unset;
+        z-index: -1;
+    }
+
+    section.traffic_patrol .traffic_patrol-descr {
+        display: block;
+    }
+
+    section.traffic_patrol .traffic_patrol-text {
+        font-size: 1.4rem;
+        line-height: 21px;
+        margin-bottom: 20px;
+    }
+
+    section.traffic_patrol .traffic_patrol-descr .traffic_patrol-text:first-child {
+        margin-bottom: 20px;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider-wrapper {
+        grid-column-start: 1;
     }
 }
 
