--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -182,14 +182,18 @@ section.main .main_title span.large_letter {
     border-radius: 50px;
 }
 
+section.main .main_info-wrapper {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(5, 1fr);
+}
+
 section.main .main_info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    max-width: 600px;
-    margin-right: 309px;
-    margin-left: auto;
+    grid-column: 3/5;
 }
 
 section.main .main_info .main_info-descr {
@@ -254,13 +258,13 @@ section.traffic_patrol .container_main {
 
 section.traffic_patrol .traffic_patrol-wrapper {
     display: grid;
-    /*column-gap: 96px;*/
+    gap: 20px;
     grid-template-columns: repeat(5, 1fr);
     margin-bottom: 40px;
 }
 
 section.traffic_patrol .traffic_patrol-wrapper img {
-    display: none;
+    width: 600px;
     position: absolute;
     left: 0;
     top: 155px;
@@ -278,7 +282,7 @@ section.traffic_patrol .traffic_patrol-title {
 section.traffic_patrol .traffic_patrol-descr {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr;
     grid-column: 3/6;
     gap: 20px;
 }
@@ -290,24 +294,32 @@ section.traffic_patrol .traffic_patrol-text {
     line-height: 24px;
 }
 
-section.traffic_patrol .traffic_patrol-text:nth-child(2) {
+section.traffic_patrol .traffic_patrol-descr.one .traffic_patrol-text:nth-child(2) {
     grid-column: 2/4;
 }
 
-section.traffic_patrol .traffic_patrol_slider {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+section.traffic_patrol .traffic_patrol_slider-wrapper {
+    /*display: grid;*/
+    /*grid-template-columns: repeat(5, 1fr);*/
+    /*gap: 20px;*/
+    grid-column: 3/5;
 }
+
+/*section.traffic_patrol .traffic_patrol_slider {*/
+/*    display: grid;*/
+/*    gap: 20px;*/
+/*    grid-template-columns: repeat(5, 1fr);*/
+/*    grid-column: 3/5;*/
+/*}*/
 
 section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid {
     display: flex;
-    grid-column-start: 3;
+    /*grid-column: 3/5;*/
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
     border: 1px solid white;
-    width: 540px;
 }
 
 section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_img {
@@ -351,6 +363,23 @@ section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .s
 
 
 
+/*footer*/
+
+footer.footer_main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
+footer.footer_main .footer_title {
+    color: #FFF;
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 3.2rem;
+    font-weight: 700;
+    line-height: 32px;
+    text-transform: uppercase;
+}
 
 
 
