--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -5,6 +5,10 @@
 /*header*/
 /*main*/
 /*traffic_patrol*/
+/*footer*/
+/*situation_centre*/
+
+
 
 * {
     box-sizing: border-box;
@@ -141,6 +145,7 @@ body.main {
 
 section.main {
     padding: 60px 20px 0 20px;
+    height: 100vh;
 }
 
 section.main .container_main {
@@ -264,6 +269,7 @@ section.traffic_patrol .traffic_patrol-wrapper {
 }
 
 section.traffic_patrol .traffic_patrol-wrapper img {
+    display: none;
     width: 600px;
     position: absolute;
     left: 0;
@@ -298,6 +304,10 @@ section.traffic_patrol .traffic_patrol-descr.one .traffic_patrol-text:nth-child(
     grid-column: 2/4;
 }
 
+section.traffic_patrol .traffic_patrol-descr.two {
+    margin-bottom: 20px;
+}
+
 section.traffic_patrol .traffic_patrol_slider-wrapper {
     /*display: grid;*/
     /*grid-template-columns: repeat(5, 1fr);*/
@@ -312,7 +322,7 @@ section.traffic_patrol .traffic_patrol_slider-wrapper {
 /*    grid-column: 3/5;*/
 /*}*/
 
-section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid {
+.traffic_patrol-card, section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card {
     display: flex;
     /*grid-column: 3/5;*/
     flex-direction: column;
@@ -322,7 +332,7 @@ section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid {
     border: 1px solid white;
 }
 
-section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_img {
+.traffic_patrol-card .slid_img, section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card .slid_img {
     max-width: 540px;
     width: 100%;
     height: 444px;
@@ -330,7 +340,7 @@ section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_img {
     background: #090909 url("../../img/layout/pages/main/slider/amarok_slide.png") no-repeat bottom center/cover;
 }
 
-section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info {
+.traffic_patrol-card .slid_info, section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card .slid_info {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -340,7 +350,7 @@ section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info {
     border-radius: 0 0 8px 8px;
 }
 
-section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .slid_info-desc .slid_info-title {
+.traffic_patrol-card .slid_info .slid_info-desc .slid_info-title, section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card .slid_info .slid_info-desc .slid_info-title  {
     font-family: 'MoscowSans', sans-serif;
     font-size: 1.8rem;
     font-weight: 700;
@@ -349,7 +359,7 @@ section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .s
     margin-bottom: 10px;
 }
 
-section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .slid_info-desc .slid_info-text {
+.traffic_patrol-card .slid_info .slid_info-desc .slid_info-text, section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card .slid_info .slid_info-desc .slid_info-text {
     font-family: 'MoscowSans', sans-serif;
     font-size: 1.4rem;
     font-weight: 400;
@@ -357,7 +367,7 @@ section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .s
     color: #787878;
 }
 
-section.traffic_patrol .traffic_patrol_slider .traffic_patrol-slid .slid_info .slid_info-link {
+.traffic_patrol-card .slid_info .slid_info-link, section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card .slid_info .slid_info-link {
     align-self: flex-end;
 }
 
@@ -379,6 +389,58 @@ footer.footer_main .footer_title {
     font-weight: 700;
     line-height: 32px;
     text-transform: uppercase;
+}
+
+
+
+/*situation_centre*/
+
+section.situation_centre {
+    padding: 60px 0 0 0;
+}
+
+section.situation_centre .container_main {
+    padding: 0 0 60px 0;
+}
+
+section.situation_centre .situation_centre_grid-wrapper {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 20px 20px;
+    grid-auto-flow: row;
+    grid-template-areas:
+	"situation-1 . brain_heart-2 brain_heart-2 brain_heart-2"
+	". major_events-3 employ-4 slider-5 slider-5"
+	". bus-6 man_text-7 slider-5 slider-5";
+}
+
+section.situation_centre .situation_centre_grid-wrapper .situation-1 {
+    grid-area: situation-1;
+}
+
+section.situation_centre .situation_centre_grid-wrapper .brain_heart-2 {
+    grid-area: brain_heart-2;
+}
+
+section.situation_centre .situation_centre_grid-wrapper .major_events-3 {
+    grid-area: major_events-3;
+}
+
+section.situation_centre .situation_centre_grid-wrapper .employ-4 {
+    grid-area: employ-4;
+}
+
+section.situation_centre .situation_centre_grid-wrapper .slider-5 {
+    grid-area: slider-5;
+}
+
+section.situation_centre .situation_centre_grid-wrapper .bus-6 {
+    grid-area: bus-6;
+}
+
+section.situation_centre .situation_centre_grid-wrapper .man_text-7 {
+    grid-area: man_text-7;
 }
 
 
