--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -331,6 +331,8 @@ section.traffic_patrol .traffic_patrol_slider-wrapper {
     align-items: center;
     border-radius: 10px;
     border: 1px solid white;
+    width: 100%;
+    height: 100%;
 }
 
 .traffic_patrol-card .slid_img, section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card .slid_img {
@@ -397,11 +399,11 @@ footer.footer_main .footer_title {
 /*situation_centre*/
 
 section.situation_centre {
-    padding: 60px 0 0 0;
+    padding: 60px 20px 0 20px;
 }
 
 section.situation_centre .container_main {
-    padding: 0 20px 120px 20px;
+    padding: 0 0 120px 0;
 }
 
 section.situation_centre .situation_centre_grid-wrapper {
@@ -534,18 +536,18 @@ section.situation_centre .situation_centre_grid-wrapper .man_plus_major_events-8
 /*help_desk*/
 
 section.help_desk {
-    padding: 60px 0 0 0;
+    padding: 60px 20px 0 20px;
 }
 
 section.help_desk .container_main {
-    padding: 0 20px 120px 20px;
+    padding: 0 0 120px 0;
 }
 
 section.help_desk .help_desk_grid-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 20px 20px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 234px 352px 444px;
+    gap: 30px 20px;
     grid-auto-flow: row;
     grid-template-areas:
         "help_desk-1 parkon-2 parkon-2 parkon-2 driver-3"
@@ -559,17 +561,51 @@ section.help_desk .help_desk_grid-wrapper .help_desk-1 {
 
 section.help_desk .help_desk_grid-wrapper .parkon-2 {
     grid-area: parkon-2;
+    padding: 20px 35px 20px 20px;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+
+section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 26px;
+    margin-bottom: 70px;
+    max-width: 520px;
+}
+
+section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_descr {
+    display: flex;
+}
+
+section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_descr .parkon_text:first-child {
+    margin-right: 35px;
 }
 
 section.help_desk .help_desk_grid-wrapper .driver-3 {
     grid-area: driver-3;
 }
 
+section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 24px;
+}
+
 section.help_desk .help_desk_grid-wrapper .equipment-4 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.4fr 1.3fr 1.3fr;
-    gap: 0;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 29px 151px 151px;
+    gap: 10px;
     grid-auto-flow: row;
     grid-template-areas:
         "text text text text text"
@@ -580,6 +616,91 @@ section.help_desk .help_desk_grid-wrapper .equipment-4 {
 
 section.help_desk .help_desk_grid-wrapper .equipment-4 .text {
     grid-area: text;
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+
+/*магия уголков начата*/
+
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"] {
+    display: inline-block;
+    width: 100%;
+    position: relative;
+    border: 2px solid #545454;
+    transition: all .3s ease;
+    /*cursor: pointer;*/
+}
+
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"] .skill_content {
+    position: relative;
+    z-index: 2;
+}
+
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:before,
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:after {
+    content: "";
+    z-index: -1;
+    display: block;
+    position: absolute;
+    background: #000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+}
+
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:before {
+    width: calc(100% + 5px);
+    height: 90%;
+    z-index: 1;
+    transition: height 0.6s;
+}
+
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:after {
+    height: calc(100% + 5px);
+    width: 90%;
+    z-index: 0;
+    transition: width 0.7s;
+}
+
+/*section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:hover:before,*/
+/*section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:focus:before {*/
+/*    height: 50%;*/
+/*}*/
+
+/*section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:hover:after,*/
+/*section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"]:focus:after {*/
+/*    width: 74%;*/
+/*}*/
+
+/*магия уголков закончена*/
+
+
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"] .skill_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 0;
+    width: 100%;
+    height: 100%;
+}
+
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"] .skill_content img {
+    width: 48px;
+    height: 48px;
+}
+
+section.help_desk .help_desk_grid-wrapper .equipment-4 div[class^="skill-"] .skill_content .skill_text {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 1.3rem;
+    font-weight: 400;
+    line-height: 16px;
+    text-align: center;
 }
 
 section.help_desk .help_desk_grid-wrapper .equipment-4 .skill-1 {
